<resources>
    <string name="app_name">MealPicker</string>
    <string name="smoothie">SMOOTHIE</string>
    <string name="salad">SALAD</string>
    <string name="soup">SOUP</string>
    <string name="stirfry">STIRFRY</string>
    <string name="pickfruit">PICK A FRUIT</string>
    <string name="tab1">INGREDIENTS</string>
    <string name="tab2">INSTRUCTION</string>
    <string name="tab3">NUTRIENTS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_smoothies">Smoothies</string>
    <string name="strawberrybanana">Strawberry Banana </string>
    <string name="peachsmoothie">Peach </string>
    <string name="carrotcake">Carrot Cake </string>
    <string name="greensmoothie">Healthy Green </string>
    <string name="blueberrypie">Blueberry Pie </string>
    <string name="title_activity_strawbana">Strawberry Banana</string>
    <string name="title_activity_peach">Peach</string>
    <string name="title_activity_carrot_cake">Carrot Cake</string>
    <string name="title_activity_blueberry_pie">Blueberry Pie</string>
    <string name="title_activity_healthy_green">Healthy Green</string>
    <string name="Smoothie1_Ingre">
        "4 cups frozen strawberries\n\n"
        "1 cup frozen banana chunks\n\n"
        "1 cup milk of choice\n\n" 
    </string>
    <string name="Smoothie1_Instruct">
        "Add the milk to the bottom of your high speed blender\n\n"
        "Add strawberries and frozen bananas on top of the milk\n\n"
        "Blend, scraping down the edges if necessary\n\n"
        "Serves 2-3 glasses\n\n"
    </string>
    <string name="Smoothie2_Ingre">
        "2 cups kale\n\n"
        "1 inch piece of ginger, peeled\n\n"
        "3 oranges, peeled\n\n"
        "1 lemon, peeled\n\n"
        "1 small frozen banana\n\n"
        "1 cup frozen peaches\n\n"
        "1 cup cold water\n\n"
        "2 cups ice\n\n"</string>
    <string name="Smoothie2_Instruct">
        "Combine all ingredients except ice in a Blendtec or other high speed blender and blend until smooth.\n\n"
        "Add ice and blend\n\n"
        "Serves 1-2 very large glasses, or 4-5 regular sized\n\n"
    </string>
    <string name="Smoothie3_Ingre">
        "16 oz frozen peach slices\n\n"
        "1 fresh peach, pit removed\n\n"
        "1 cup plain 0% greek yogurt\n\n"
        "1 cup milk\n\n"
        "1/4 teaspoon cinnamon\n\n"
        "1/4 cup rolled oats\n\n"
        "4 tablespoons pure maple syrup\n\n"
    </string>
    <string name="Smoothie3_Instruct">
        "Combine all ingredients in a high speed blender and blend until smooth (it will be very thick)\n\n"
        "Pour and enjoy!\n\n"
        "Serves 2 glasses\n\n"
    </string>
    <string name="Smoothie4_Ingre">
        "3 medium carrots, peeled\n\n"
        "1 1/2 bananas, frozen in chunks\n\n"
        "1 cup 2% milk\n\n"
        "1/2 cup plain 0% greek yogurt\n\n"
        "1/4 teaspoon cinnamon\n\n"
        "1/4 teaspoon nutmeg\n\n"
        "3 tablespoons pure maple syrup\n\n"
        "1 cup ice (optional)\n\n"
    </string>
    <string name="Smoothie4_Instruct">
        "Add all ingredients to a high speed blender and blend until smooth\n\n"
        "Serve immediately\n\n"
        "Serves 2 glasses\n\n"
    </string>
    <string name="Smoothie5_Ingre">
        "3/4 teaspoon lemon zest\n\n"
        "1 cup frozen banana chunks\n\n"
        "3 cups frozen blueberries\n\n"
        "1/2 cup rolled oats\n\n"
        "1 cup plain 0% greek yogurt\n\n"
        "1/8 cup pure maple syrup\n\n"
        "1 1/2 cups unsweetened vanilla almond milk\n\n"
        "1/2 teaspoon cinnamon\n\n"
    </string>
    <string name="Smoothie5_Instruct">
        "Add all ingredients to a high speed blender and blend until smooth\n\n"
        "Serves 2-3 glasses\n\n"
    </string>
    <string name="title_activity_salad">Salads</string>
    <string name="greenbeanwalnut">Green Bean And Walnut Salad</string>
    <string name="mozzarellatomato">Freash Mozzarella And Tomato Salad</string>
    <string name="strawberryspinach">Strawberry Spinach Salad</string>
    <string name="cornnbean">Colorful Corn And Bean Salad</string>
    <string name="tomato">Sliced Tomato Salad</string>
    <string name="Salad1_Ingre">
        "3 pounds fresh green beans, trimmed\n\n"
        "3/4 cup chopped walnuts\n\n"
        "1/3 cup dried cranberries\n\n"
        "VINAIGRETTE:\n\n"
        "6 tablespoons olive oil\n\n"
        "6 tablespoons red wine vinegar\n\n"
        "3 garlic cloves, minced\n\n"
        "1/2 teaspoon salt\n\n"
        "1/2 teaspoon pepper\n\n"
    </string>
    <string name="Salad1_Instruct">
        "Place beans in a Dutch oven and cover with water. Bring to a boil. Cover and cook for 4-7 minutes or until crisp-tender; drain.\n\n"
        "In a large bowl, combine the beans, walnuts and cranberries. In a small bowl, whisk the vinaigrette ingredients. Pour over bean mixture; toss to coat. Cover and refrigerate until chilled. Toss before serving.\n\n"
        "Makes 12 servings\n\n"
</string>
    <string name="Salad2_Ingre">
        "6 plum tomatoes, chopped\n\n"
        "2 cartons (8 ounces each) fresh mozzarella cheese pearls, drained\n\n"
        "1/3 cup minced fresh basil\n\n"
        "1 tablespoon minced fresh parsley\n\n"
        "2 teaspoons minced fresh mint\n\n"
        "1/4 cup lemon juice\n\n"
        "1/4 cup olive oil\n\n"
        "3/4 teaspoon salt\n\n"
        "1/4 teaspoon pepper\n\n"
        "2 medium ripe avocados, peeled and chopped\n\n"
    </string>
    <string name="Salad2_Instruct">
        "In a large bowl, combine the tomatoes, cheese, basil, parsley and mint; set aside.\n\n"
        "In a small bowl, whisk the lemon juice, oil, salt and pepper. Pour over tomato mixture; toss to coat. Cover and refrigerate for at least 1 hour before serving.\n\n"
        "Just before serving, stir in avocados. Serve with a slotted spoon.\n\n"
        "Makes 8 servings\n\n"
    </string>
    <string name="Salad3_Ingre">
        "1/3 cup olive oil\n\n"
        "1/4 cup sugar\n\n"
        "3 tablespoons white or balsamic vinegar\n\n"
        "2 tablespoons sesame seeds\n\n"
        "1 tablespoon poppy seeds\n\n"
        "1 tablespoon chopped onion\n\n"
        "1/4 teaspoon paprika\n\n"
        "1/4 teaspoon Worcestershire sauce\n\n"
        "1 package (9 ounces) fresh spinach, trimmed\n\n"
        "4 cups fresh strawberries, sliced\n\n"
        "1/4 cup chopped pecans, toasted\n\n"
    </string>
    <string name="Salad3_Instruct">
        "Place the first eight ingredients in a jar with a tight-fitting lid; shake well. Refrigerate for 1 hour.\n\n"
        "Just before serving, combine the remaining ingredients in a large bowl. Shake dressing and drizzle over salad; toss to coat.\n\n"
        "Makes 10 servings\n\n"
    </string>
    <string name="Salad4_Ingre">
        "1 can (15 ounces) black beans, rinsed and drained\n\n"
        "1 jar (13 ounces) corn relish\n\n"
        "1/2 cup canned kidney beans\n\n"
        "1/2 cup quartered cherry tomatoes\n\n"
        "1/2 cup chopped celery\n\n"
        "1/4 cup chopped sweet orange pepper\n\n"
        "1/4 cup sliced pimiento-stuffed olives\n\n"
        "2 teaspoons minced fresh parsley\n\n"
    </string>
    <string name="Salad4_Instruct">
        "In a large bowl, combine all ingredients. Cover and refrigerate until serving.\n\n"
        "Makes 12 servings (1/2 cup each)\n\n"
    </string>
    <string name="Salad5_Ingre">
        "8 large tomatoes, cut into 1/4-inch slices\n\n"
        "2 large sweet onions, halved and thinly sliced\n\n"
        "1/3 cup olive oil\n\n"
        "2 tablespoons lemon juice\n\n"
        "1 teaspoon dried oregano\n\n"
        "3/4 teaspoon salt\n\n"
        "1/4 teaspoon pepper\n\n"
        "2 tablespoons minced fresh parsley\n\n"
    </string>
    <string name="Salad5_Instruct">
        "Arrange tomatoes and onions on a large rimmed serving platter. In a small bowl, whisk the oil, lemon juice, oregano, salt and pepper. Drizzle over top. Sprinkle with parsley.\n\n"
        "Makes 12 servings\n\n"
    </string>
    <string name="title_activity_soup">Soups</string>
    <string name="roastedtomatosoup">Roasted Tomato Soup</string>
    <string name="chipotlebutternutsquashsoup">Chipotle Butternut Squash Soup</string>
    <string name="cauliflowersoup">Cauliflower Soup</string>
    <string name="veggiethaicurrysoup">Veggie Thai Curry Soup</string>
    <string name="quickmexicanbeansoup">Quick Mexican Bean Soup</string>
    <string name="Soup1_Ingre">
        "15 large tomatoes (5 pounds), seeded and quartered\n\n"
        "1/4 cup plus 2 tablespoons canola oil, divided\n\n"
        "8 garlic cloves, minced\n\n"
        "1 large onion, chopped\n\n"
        "2 cups water\n\n"
        "1 teaspoon salt\n\n"
        "1/2 teaspoon crushed red pepper flakes, optional\n\n"
        "1/2 cup heavy whipping cream\n\n"
        "Fresh basil leaves, optional\n\n"
    </string>
    <string name="Soup1_Instruct">
        "Preheat oven to 400°. Place tomatoes in a greased 15x10x1-in. baking pan. Combine 1/4 cup oil and garlic; drizzle over tomatoes. Toss to coat. Bake 15-20 minutes or until softened, stirring occasionally. Remove and discard skins.\n\n"
        "Meanwhile, in a Dutch oven, saute onion in remaining oil until tender. Add tomatoes, water, salt and, if desired, pepper flakes. Bring to a boil. Reduce heat; cover and simmer 30 minutes or until flavors are blended. Cool slightly.\n\n"
        "In a blender, process soup in batches until smooth. Return to pan. Stir in cream and heat through. Sprinkle with basil if desired.\n\n"
        "Makes 6 servings.\n\n"
    </string>
    <string name="Soup2_Ingre">
        "2 cups diced peeled butternut squash\n\n"
        "1 small carrot, finely chopped\n\n"
        "1 green onion, sliced\n\n"
        "1/2 teaspoon ground cumin\n\n"
        "1 tablespoon olive oil\n\n"
        "2 garlic cloves, minced\n\n"
        "2 cups vegetable broth, divided\n\n"
        "1 can (14-1/2 ounces) diced tomatoes, undrained\n\n"
        "3 ounces cream cheese, cubed\n\n"
        "1/4 cup minced fresh basil\n\n"
        "1 chipotle pepper in adobo sauce, chopped\n\n"
        "1 can (15 ounces) black beans, rinsed and drained\n\n"
        "1 can (11 ounces) Mexicorn, drained\n\n"
        "2 cups fresh baby spinach\n\n"
        "Fresh sage, optional\n\n"
    </string>
    <string name="Soup2_Instruct">
        "In a large saucepan, saute the squash, carrot, onion and cumin in oil for 10 minutes. Add garlic; cook 1 minute longer. Add 1-1/2 cups broth; bring to a boil. Reduce heat. Cover and simmer for 10-12 minutes or until vegetables are tender; cool slightly.\n\n"
        "Transfer mixture to a blender; add the tomatoes, cream cheese, basil, chipotle pepper and remaining broth. Cover and process for 1-2 minutes or until smooth.\n\n"
        "Return to the saucepan; stir in the beans, corn and spinach. Cook and stir until spinach is wilted and soup is heated through. If desired, sprinkle with fresh sage.\n\n"
        "Makes 5 servings.\n\n"

    </string>
    <string name="chilligingervegetabletofu">Chilli Ginger Vegetable Tofu Stirfry</string>
    <string name="beetrootporiyal">Beetroot Poriyal</string>
    <string name="rawpapaya">Raw Papaya Stirfry</string>
    <string name="zucchinipepper">Zucchini and Pepper Stirfry</string>
    <string name="cabbagecarrot">Cabbage and Carrot Stirfry</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="mandarin">Mandarin</string>
    <string name="pomegranate">Pomegranate</string>
    <string name="strawberry">Strawberries</string>
</resources>