<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appsbackground"
    tools:context=".MealMainActivity">

    <Button
        android:id="@+id/b_smoothies"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="33dp"
        android:layout_marginRight="74dp"
        android:background="@android:color/background_light"
        android:onClick="smoothies"
        android:text="@string/smoothie" />

    <Button
        android:id="@+id/b_salad"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:onClick="salad"
        android:text="@string/salad" />

    <Button
        android:id="@+id/b_soup"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="206dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:onClick="soup"
        android:text="@string/soup" />

    <Button
        android:id="@+id/b_stirfry"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="289dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:onClick="stirfry"
        android:text="@string/stirfry" />

    <Button
        android:id="@+id/b_pickfruit"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="374dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:onClick="pickfruit"
        android:text="@string/pickfruit" />


</RelativeLayout>