<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Stirfry"
    tools:showIn="@layout/activity_stirfry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_height" />

        <ImageView
            android:id="@+id/Stirfry1"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/chilligingervegetabletofu"
            android:focusable="true"
            android:onClick="Stirfry1"
            android:src="@drawable/chilligingervegetabletofustirfry" />

        <TextView
            android:id="@+id/t_chillitofu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chilligingervegetabletofu"
            android:textAlignment="center"
            android:textSize="@dimen/content_font"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_height" />

        <ImageView
            android:id="@+id/Stirfry2"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/beetrootporiyal"
            android:focusable="true"
            android:onClick="Stirfry2"
            app:srcCompat="@drawable/beetrootporiyal" />

        <TextView
            android:id="@+id/t_beetrootporiyal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beetrootporiyal"
            android:textAlignment="center"
            android:textSize="@dimen/content_font"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_height" />

        <ImageView
            android:id="@+id/Stirfry3"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/rawpapaya"
            android:focusable="true"
            android:onClick="Stirfry3"
            app:srcCompat="@drawable/rawpapayastirfry" />

        <TextView
            android:id="@+id/t_rawpapaya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rawpapaya"
            android:textAlignment="center"
            android:textSize="@dimen/content_font"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_height" />

        <ImageView
            android:id="@+id/Stirfry4"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/zucchinipepper"
            android:focusable="true"
            android:onClick="Stirfry4"
            app:srcCompat="@drawable/zucchiniandpepperstirfry" />

        <TextView
            android:id="@+id/t_zucchinipepper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zucchinipepper"
            android:textAlignment="center"
            android:textSize="@dimen/content_font"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_height" />

        <ImageView
            android:id="@+id/Stirfry5"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/cabbagecarrot"
            android:focusable="true"
            android:onClick="Stirfry5"
            app:srcCompat="@drawable/cabbagencarrotstirfry" />

        <TextView
            android:id="@+id/t_cabbagecarrot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cabbagecarrot"
            android:textAlignment="center"
            android:textSize="@dimen/content_font"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_bottom" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>